Se agrega .bat para transpilar y levantar servidor

--- a/front/src/app/home/home.component.html
+++ b/front/src/app/home/home.component.html
@@ -29,7 +29,7 @@
             </strong>
             <mat-card-content [hidden]="showStarsField">
               <br>
-              <mat-checkbox class="margin-stars" (click)="loadHotels(6)">Todas las estrellas</mat-checkbox>
+              <mat-checkbox class="margin-stars" (click)="loadHotels()">Todas las estrellas</mat-checkbox>
               <br>
               <mat-checkbox class="margin-stars" (click)="getByStars(5)" >
                 <img src="assets/images/estrellaBrillante.png" alt="lupa" height="20">
